--- a/index.html
+++ b/index.html
@@ -28,52 +28,72 @@
     </div>
   </nav>
 
-  <main>
+  <main class="mulitext">
     <body>
       <div class="mulitext">
         <div class="widetext">  
-        <div class="titletext" id="homepagetitle">
-       <p3>HOME</p3>
-        </div>
-       </div>
-      <!--<section>
+        <div class="titletext widetext">HOME</div>
+      </div>
+      <div class="titletext widetext">ANNOUCEMENTS</div>
+          <div class="tweets">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I was thinking about doing charity commissions (donate towards blm, dm proof, then i’ll draw an icon!!) It’ll probably be on my insta (@/zjaidenart) <br>interested???</p>&mdash; Sip Boba • blm!! (@Zjaidentweets) <a href="https://twitter.com/Zjaidentweets/status/1267704497049985025?ref_src=twsrc%5Etfw">June 2, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+      </div>
+      </div>
+
+      <!--works-->
+       <section>
+        <div class="widetext titletext">WORK</div>
         <div class="container" id="fbox1">
-          <img src="https://media.discordapp.net/attachments/619583824023519232/657165101052329985/Screen_Shot_2019-12-19_at_2.18.20_AM.png?width=300&height=300" alt="guyingarden" class="image">
+          <img src="https://cdn.discordapp.com/attachments/619583824023519232/718493237811347506/image4.jpg" alt="Vexlineless" class="image">
           <div class="overlay">
-            <div class="text"><p1>Photography</p1></div>
+            <div class="text"><p1>Vex</p1></div>
           </div>
         </div>
 
         <div class="container" id="fbox2">
+          <img src="https://cdn.discordapp.com/attachments/619583824023519232/718493236041351230/image0.jpg" alt="elohimesdraw" class="image">
+          <div class="overlay">
+            <div class="text"><p1>Vex's Character Ref</p1></div>
+          </div>
+        </div>
+
+        <div class="container" id="fbox3">
           <img src="https://cdn.discordapp.com/attachments/619583824023519232/657273313374109696/image0.png" alt="elohimesdraw" class="image">
           <div class="overlay">
             <div class="text"><p1>Illustration</p1></div>
           </div>
         </div>       
    
-        <div class="container" id="fbox3">
+        <div class="container" id="fbox4">
           <img src="https://cdn.discordapp.com/attachments/619583824023519232/657278924979699732/image0.png" alt="dragnFLYEposter" class="image">
           <div class="overlay">
             <div class="text"><p1>Design</p1></div>
           </div>
         </div>  
             
-        <div class="container" id="fbox4">
+        <div class="container" id="fbox5">
           <img src="https://cdn.discordapp.com/attachments/619583824023519232/657279828596097025/image0.png" alt="feefnou" class="image">
           <div class="overlay">
             <div class="text"><p1>Feef</p1></div>
           </div>
         </div> 
+
+        <div class="container" id="fbox6">
+          <img src="https://cdn.discordapp.com/attachments/619583824023519232/718493237219950722/image2.jpg" alt="breadgirlsticker" class="image">
+          <div class="overlay">
+            <div class="text"><p1>Baker</p1></div>
+          </div>
+        </div> 
+
       </section>
-    -->
+
 
         <!--about page-->
         <section class="about">
-          <p1>About</p1>
-  
-          <div id="meillustration">
-            <img src="https://media.discordapp.net/attachments/710556543543934978/716212735712690216/image0.png?width=1068&height=1068" alt="icon">
-          </div>
+          <div class="widetext titletext">ABOUT</div>
+            <img id="meillustration" src="https://media.discordapp.net/attachments/710556543543934978/716212735712690216/image0.png?width=1068&height=1068" alt="icon">
+
           
           <div class="biotext" id="description">
             <p2> Zoe Hong is a high school student with a passion for hot sauce and graphic design. In her free time she dabbles in illustration and photography. She is a varsity athlete, playing both soccer and volleyball. She is curretly the marketing captain for frc team 5940 BREAD, and is team leader for the community events in the leadership program. 
@@ -83,21 +103,21 @@
 
         <!--part of about page,, contact information-->
         <section class="contactinfo">
+          <div>
+            <p2>Contact Me</p2>
+          </div>
           <div class="biotext" id="description">
-            <p2>zjaiden321@gmail.com<br></br>@zjaidentweets</p2> 
+              <a href="mailto: zjaiden321@gmail.com">zjaiden321@gmail.com</a></li>
+              <br></br>
+              <a href="https://twitter.com/Zjaidentweets">@zjaidentweets</a></li>
+            </br></br>
+              <a href="https://www.instagram.com/p/B6wyz8sBxNI/?igshid=16p9umtkc06po">@zjaidenart</a></li>
+          </div>
        </section>
 
-       <!--work: illustration, gdesign, etc (how should I link these)-->
-       <!--note: sign up for imgur acc (TO HOST IMAGES NOT TROUGH DISCORD LMFAO)-->
-       <section>
-        <div class="container" id="fbox1">
-          <img src="updatethisimage" alt="artpiecename" class="image">
-        <div class="overlay">
-       </section>
-
-      </div>
-    </body>
+      </body>
 </main>
+
 <!--<main>
 
     <body>
@@ -112,6 +132,5 @@
         </div>
     </body>
 </main>
-
-
+-->
 </html>
